# lan-shootmans

./: .gitignore  Cargo.toml  README.md  build.rs
assets/maps/: test_map.map
assets/textures/prototype/Orange/: texture_03.toml
assets/textures/prototype/Red/: texture_11.toml
src/: config.rs  cursor.rs  dev_console.rs  flycam.rs  health.rs  lib.rs  lifetime.rs  main.rs  netcode.rs  player.rs  player_ui.rs  trenchbroom.rs
