[package]
name = "lan-shootmans"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {  version = "0.14.2", features = ["file_watcher"] }
bevy_rapier3d = {version = "0.27.0", features = ["simd-stable", "debug-render-3d"]}
bevy_trenchbroom = {  version = "0.5.1", features = ["rapier"] }
bevy_egui = "0.30.0"
bevy_renet = "0.0.12"

[build-dependencies]
fs_extra = "1.3.0"
